# solana-verification-app

./: Anchor.toml  jest.config.ts  package.json  tsconfig.json  vercel.json
api/: createKyc.ts  fetchAccount.ts
programs/newkycproject/: Cargo.toml
programs/newkycproject/src/: lib.rs
scripts/: interact.ts
tests/: newkycproject.test.ts
